--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
            <div class="mainHeader">
            <p> Computer Science Student with an interest in software development</p>
            <h1> Hello, i'm Jared welcome to my portfolio</h1>
+
+           <a href="CV.pdf" target="_blank" download="CV.pdf" ><button>Download CV</button></a>
+
            </div>
 
 
@@ -57,8 +60,15 @@
           
 <div id="Project">                
 
-Project page
 
+
+
+<div id="examples"></div>
+<h1>My Skills</h1>
+<div id="Skills">
+<img src="C++_logo.png" alt="C++_logo"> <img src="C_Logo.png" alt="C-logo"> 
+<img src="java-logo.png" alt="Java-logo"> <img src="html-logo.png" alt="HTML logo"> <img src="css-logo.png" alt="CSS logo">
+</div>
 </div>
 
 <!-----------------------------------Contact-------------------------------------------->
@@ -70,9 +80,9 @@ Project page
 
     
 
-  <div id="ContactHeading">
-    Contact me with any questions!
-  </div>
+  <h1 id="ContactHeading">
+    Contact me!
+  </h1>
 
 
     <div id="ContactForm">  
