--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width = device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="images/x-icon" href="ClemsonLogo.png" />
+    <link rel="icon" type="images/x-icon" href="images/ClemsonLogo.png" />
 </head>
 
 <body>
   <div class="navbar" id="navbar">  
     <div class="dropdown">
-       <button> <img src="hamburger.png" alt="Hamburger" border="0"> </button>
+       <button> <img src="images/hamburger.png" alt="Hamburger" border="0"> </button>
        <div class="content">
            <a href="#header">Home</a>
            <a href="#About">About</a>
@@ -63,12 +63,16 @@
 
 
 
-<div id="examples"></div>
-<h1>My Skills</h1>
+
+
+
+
+
 <div id="Skills">
-<img src="C++_logo.png" alt="C++_logo"> <img src="C_Logo.png" alt="C-logo"> 
-<img src="java-logo.png" alt="Java-logo"> <img src="html-logo.png" alt="HTML logo"> <img src="css-logo.png" alt="CSS logo">
+<img src="images/C++_logo.png" alt="C++_logo"> <img src="images/C_Logo.png" alt="C-logo"> 
+<img src="images/java-logo.png" alt="Java-logo"> <img src="images/html-logo.png" alt="HTML logo"> <img src="images/css-logo.png" alt="CSS logo">
 </div>
+
 </div>
 
 <!-----------------------------------Contact-------------------------------------------->
@@ -105,9 +109,9 @@
 
     <div id="Footer">
 
-      <a href="https://www.linkedin.com/in/jared-alvarado-64507825a" target="_blank"> <img src="linkedin-Logo.png" alt="Linkedin-Logo-Link"></a>
-      <a href="mailto: alvara8@clemson.edu" target="_blank"> <img src="Email-Logo.png" alt="Email-logo-Link"> </a>
-      <a href="https://github.com/Alvara8" target="_blank"> <img src="Github-Logo.png" alt="Linkedin-Logo"> </a>
+      <a href="https://www.linkedin.com/in/jared-alvarado-64507825a" target="_blank"> <img src="images/linkedin-Logo.png" alt="Linkedin-Logo-Link"></a>
+      <a href="mailto: alvara8@clemson.edu" target="_blank"> <img src="images/Email-Logo.png" alt="Email-logo-Link"> </a>
+      <a href="https://github.com/Alvara8" target="_blank"> <img src="images/Github-Logo.png" alt="Linkedin-Logo"> </a>
 
     </div>
 
