--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
 
            <div class="mainHeader">
-           <p> Computer Science Student with an interest in software development</p>
-           <h1> Hello, i'm Jared welcome to my portfolio</h1>
+           <h1> Hello, I'm <span style="color: #15aabf;"> Jared.</span> </h1>
+           <p> Computer Science Student with an interest in software development.</p>
+
 
            <a href="CV.pdf" target="_blank" download="CV.pdf" ><button>Download CV</button></a>
 
@@ -51,7 +52,20 @@
 
            <div id="About">
             <div id="picture"> <img src="images/IMG_6796.JPG" alt="Picture of me"></div>
-            <div id="text">Hello my name is Jared</div>
+
+
+
+            <div id="text">
+              
+              <h1>About me</h1>
+              <p>Hello, thank you for taking the time to check out my Portfolio. My name is Jared, I am an aspiring software developer with a passion for
+                 web development. I graduated from Piedmont Technical College with an AS and am now pursuing a BS in Computer Science at Clemson University. 
+                 My main focus is learning to create more user friendly, functional, and aesthetic pleasing projects.</p>
+            
+            </div>
+
+
+
            </div>
 
 
@@ -61,7 +75,7 @@
 <div id="Project">                
 
 
-<h1 id="ExampleHeader">Projects - Click for info!</h1>
+<h1 id="ExampleHeader">Projects <p>Click images for more info!</p></h1>
 
 
 
@@ -77,7 +91,6 @@
 </div>  
 
 <div class="popup-container" id="popup1">
-
   <div class="popup-content">
     <p>Caesar cipher was a encryption technique created by Julius Caesar in an effort to protect classified documents. It works by shifting each letter of the message "x" 
       amount of places from its position in the alphabet. This program has a take of Caesar cipher using C++ with a key that changes the amount each character is shifted per 
@@ -91,14 +104,18 @@
   <div class="popup-content">
     <p>Quiddler is a popular card game where one has a deck of cards comprised of one to two letter each and must use them to create a word. The score is calculated based on what 
       letters you used to create the word. Quiddler helper was created as an aid to Quiddler players, it can calculate possible words to be created based on the input as well as 
-      how many points the word is worth. There are two variation to the game, one where it shows the vaule of the word and one where it does not.</p>
+      how many points the word is worth. There are two variation to the game, one where it shows the value of the word and one where it does not.</p>
     <button onclick="togglePopup('popup2')">Close</button>
   </div>
 </div>
 
 <div class="popup-container" id="popup3">
   <div class="popup-content">
-    <p>This is the content for Button 3.</p>
+    <p>
+      I collaborated with a team to develop an expandable Connect Four game, which supports a board size of up to 100x100 and accommodates up to 10 players. We created 
+      two variations of the game, one optimized for memory efficiency and another for speed. Additionally, we implemented an interface to efficiently manage the 
+      codebase. To ensure the robustness of our implementation, we crafted 40 test cases to thoroughly assess the functionality and performance of the game across 
+      various scenarios.</p>
     <button onclick="togglePopup('popup3')">Close</button>
   </div>
 </div>
