--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width = device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  
   <link rel="icon" type="images/x-icon" href="images/ClemsonLogo.png" />
+
+  
 </head>
 
 <body>
@@ -144,12 +147,13 @@
         <input type="hidden" name="access_key" value="63a567b4-82f5-4dca-9312-6c3a65a7d109">
         <h4>Name</h4>
         <input type="text" name="name" placeholder="Your Name" required>
+        <h4>Test</h4>
+        <input type="text" name="Test" placeholder="Test" required>
         <h4>Email</h4>
         <input type="email" name="email" placeholder="Email" required>
         <h4>Message</h4>
         <textarea name="message" rows="6" placeholder="Your message" required> </textarea>
         <button type="submit">Send</button>
-
 
     </div>
 
