--- a/index.html
+++ b/index.html
@@ -145,15 +145,22 @@
 
       <form action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="63a567b4-82f5-4dca-9312-6c3a65a7d109">
+
         <h4>Name</h4>
         <input type="text" name="name" placeholder="Your Name" required>
-        <h4>Test</h4>
-        <input type="text" name="Test" placeholder="Test" required>
-        <h4>Test</h4>
-        <input type="text" name="Test" placeholder="Test" required>
+
+        <h4>Test1</h4>
+        <input type="text" name="Test1" placeholder="Test1" required>
+
+        <h4>Test2</h4>
+        <input type="text" name="Test2" placeholder="Test2" required>
+
+        <h4>Test3</h4>
+        <input type="text" name="Test3" placeholder="Test3" required>
 
         <h4>Email</h4>
         <input type="email" name="email" placeholder="Email" required>
+
         <h4>Message</h4>
         <textarea name="message" rows="6" placeholder="Your message" required> </textarea>
         <button type="submit">Send</button>
