--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="images/x-icon" href="images/ClemsonLogo.png" />
+  
 </head>
 
 <body>
@@ -58,8 +59,10 @@
       <p>Hello, thank you for taking the time to check out my Portfolio. My name is Jared, I am an aspiring software
         developer with a passion for
         web development. I graduated from Piedmont Technical College with an AS and am now pursuing a BS in Computer
-        Science at Clemson University.
-        My main focus is learning to create more user friendly, functional, and aesthetic pleasing projects.</p>
+        Science at Clemson University. My main focus is learning to create more user friendly, functional, and aesthetic pleasing projects.
+      </p>
+
+        <a style="font-size: larger; color: #555;" target="_blank" href="Etch A Sketch.html">Recent project Etch A Sketch! </a>
 
     </div>
 
@@ -75,6 +78,7 @@
     <div id="Examples">
       <button class="popup-button" onclick="togglePopup('popup1')"><img src="images/caeser-example.png"
           alt="caeser-example" border="0"></button>
+          
       <button class="popup-button" onclick="togglePopup('popup2')"> <img src="images/Quiddler-Example.png"
           alt="Quiddler-Example"> </button>
       <button class="popup-button" onclick="togglePopup('popup3')"> <img src="images/Connect4-example1.png"
