--- a/index.html
+++ b/index.html
@@ -69,11 +69,61 @@
   </div>
 
 
+<div id="UIProjects">
+  <h1 id="ExampleHeader">UI projects <p>Click images to visit!</p></h1>
+
+<ul>
+<li><a href="Connect4/index.html" target="_blank"><img src="images/ConnectFourExample.png"></a>
+  <h3>Made using HTML, CSS, Javascript</h3>
+</li>
+
+<li><a href="https://tigertix.azurewebsites.net/" target="_blank"><img src="images/TigerTixExample.png"></a>
+  <h3>Full stack application utilizing .Net C#. Utilizes a sql database and a micro service architecture.</h3>
+</li>
+
+<li><a href="Etch_A_Sketch/Etch A Sketch.html" target="_blank"><img src="images/Etch-A-SketchExample.png"></a>
+  <h3>Made using HTML, CSS, Javascript</h3>
+</li>
+
+<li><a href="Snake/index.html" target="_blank"><img src="images/SnakeExample.png"></a>
+  <h3>Made using HTML, CSS, Javascript</h3>
+
+
+</li>
+</ul>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-----------------------------------Project -------------------------------------------->
 
-
   <div id="Project">
-    <h1 id="ExampleHeader">Projects <p>Click images for more info!</p>
+    <h1 id="ExampleHeader">Server Side Projects <p>Click images for more info!</p>
     </h1>
     <div id="Examples">
       <button class="popup-button" onclick="togglePopup('popup1')"><img src="images/caeser-example.png"
@@ -103,7 +153,7 @@
       <div class="popup-content">
         <p>Quiddler is a popular card game where one has a deck of cards comprised of one to two letter each and must
           use them to create a word. The score is calculated based on what
-          letters you used to create the word. Quiddler helper was created as an aid to Quiddler players, it can
+          letters you used to create the word. Quiddler helper was created using the programming language C as an aid to Quiddler players, it can
           calculate possible words to be created based on the input as well as
           how many points the word is worth. There are two variation to the game, one where it shows the value of the
           word and one where it does not.</p>
@@ -114,7 +164,7 @@
     <div class="popup-container" id="popup3">
       <div class="popup-content">
         <p>
-          I collaborated with a team to develop an expandable Connect Four game, which supports a board size of up to
+          Collaborated with a team to develop an expandable Connect Four game in Java, which supports a board size of up to
           100x100 and accommodates up to 10 players. We created
           two variations of the game, one optimized for memory efficiency and another for speed. Additionally, we
           implemented an interface to efficiently manage the
@@ -130,7 +180,6 @@
       <img src="images/java-logo.png" alt="Java-logo"> <img src="images/html-logo.png" alt="HTML logo"> <img
         src="images/css-logo.png" alt="CSS logo">
     </div>
-
   </div>
 
   <!-----------------------------------Contact-------------------------------------------->
