--- a/Snake/index.html
+++ b/Snake/index.html
@@ -11,7 +11,7 @@
 <style>
     body {
         background-color: #0a1829;
-        color:#F4F3F2;
+        color: #F4F3F2;
     }
 
     #container {
@@ -34,9 +34,8 @@
     h1 {
         text-align: center;
         margin: 10px;
-        font-size: 1.5em;
+        font-size: 1.75em;
     }
-
 
     h2 {
         text-align: center;
@@ -45,8 +44,9 @@
 </style>
 
 <body>
-
     <h1>Welcome to snake!</h1>
+    <h2 id="highScoreBoard">High Score: </h2>
+
     <h2 id="ScoreBoard">Score: 0</h2>
 
     <div id="container">
