--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
         Science at Clemson University. My main focus is learning to create more user friendly, functional, and aesthetic pleasing projects.
       </p>
 
-        <a style="font-size: larger; color: #555;" target="_blank" href="Etch A Sketch.html">Recent project Etch A Sketch! </a>
-
     </div>
 
   </div>
@@ -74,7 +72,7 @@
 
 <ul>
 <li><a href="Connect4/index.html" target="_blank"><img src="images/ConnectFourExample.png"></a>
-  <h3>Made using HTML, CSS, Javascript</h3>
+  <h3>Developed using HTML, CSS, Javascript</h3>
 </li>
 
 <li><a href="https://tigertix.azurewebsites.net/" target="_blank"><img src="images/TigerTixExample.png"></a>
@@ -82,11 +80,11 @@
 </li>
 
 <li><a href="Etch_A_Sketch/Etch A Sketch.html" target="_blank"><img src="images/Etch-A-SketchExample.png"></a>
-  <h3>Made using HTML, CSS, Javascript</h3>
+  <h3>Developed using HTML, CSS, Javascript</h3>
 </li>
 
 <li><a href="Snake/index.html" target="_blank"><img src="images/SnakeExample.png"></a>
-  <h3>Made using HTML, CSS, Javascript</h3>
+  <h3>Developed using HTML, CSS, Javascript</h3>
 
 
 </li>
@@ -104,27 +102,18 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!-----------------------------------Project -------------------------------------------->
 
   <div id="Project">
-    <h1 id="ExampleHeader">Server Side Projects <p>Click images for more info!</p>
-    </h1>
+
+
+
+
+
+    <h1 id="ExampleHeader">Server Side Projects <p>Click images for more info!</p></h1>
+
+
+
     <div id="Examples">
       <button class="popup-button" onclick="togglePopup('popup1')"><img src="images/caeser-example.png"
           alt="caeser-example" border="0"></button>
@@ -136,6 +125,14 @@
       <button class="popup-button" onclick="togglePopup('popup3')"> <img src="images/Connect4-example2.png"
           alt="Connect4-example2"></button>
     </div>
+
+
+
+
+
+
+
+
 
     <div class="popup-container" id="popup1">
       <div class="popup-content">
@@ -174,12 +171,19 @@
         <button onclick="togglePopup('popup3')">Close</button>
       </div>
     </div>
+    
     <h1 id="ExampleSkills">Skills</h1>
     <div id="Skills">
       <img src="images/C++_logo.png" alt="C++_logo"> <img src="images/C_Logo.png" alt="C-logo">
       <img src="images/java-logo.png" alt="Java-logo"> <img src="images/html-logo.png" alt="HTML logo"> <img
         src="images/css-logo.png" alt="CSS logo">
     </div>
+
+
+
+
+
+
   </div>
 
   <!-----------------------------------Contact-------------------------------------------->
