--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="images/x-icon" href="images/ClemsonLogo.png" />
-  
+
 </head>
 
 <body>
@@ -59,7 +59,8 @@
       <p>Hello, thank you for taking the time to check out my Portfolio. My name is Jared, I am an aspiring software
         developer with a passion for
         web development. I graduated from Piedmont Technical College with an AS and am now pursuing a BS in Computer
-        Science at Clemson University. My main focus is learning to create more user friendly, functional, and aesthetic pleasing projects.
+        Science at Clemson University. My main focus is learning to create more user friendly, functional, and aesthetic
+        pleasing projects.
       </p>
 
     </div>
@@ -67,35 +68,41 @@
   </div>
 
 
-<div id="UIProjects">
-  <h1 id="ExampleHeader">UI projects <p>Click images to visit!</p></h1>
+  <div id="UIProjects">
+    <h1 id="ExampleHeader">UI projects <p>Click images to visit!</p>
+    </h1>
 
-<ul>
-<li><a href="Connect4/index.html" target="_blank"><img src="images/ConnectFourExample.png"></a>
-  <h3>Developed using HTML, CSS, Javascript</h3>
-</li>
+    <ul>
+      <li><a href="Connect4/index.html" target="_blank"><img src="images/ConnectFourExample.png"></a>
+        <h3>Developed using HTML, CSS, Javascript</h3>
+      </li>
 
-<li><a href="https://tigertix.azurewebsites.net/" target="_blank"><img src="images/TigerTixExample.png"></a>
-  <h3>Full stack application utilizing .Net C#. Utilizes a sql database and a micro service architecture.</h3>
-</li>
+      <li><a href="https://tigertix.azurewebsites.net/" target="_blank"><img src="images/TigerTixExample.png"></a>
+        <h3>Full stack application utilizing .Net C#. Utilizes a sql database and a micro service architecture.</h3>
+      </li>
 
-<li><a href="Etch_A_Sketch/Etch A Sketch.html" target="_blank"><img src="images/Etch-A-SketchExample.png"></a>
-  <h3>Developed using HTML, CSS, Javascript</h3>
-</li>
+      <li><a href="Etch_A_Sketch/Etch A Sketch.html" target="_blank"><img src="images/Etch-A-SketchExample.png"></a>
+        <h3>Developed using HTML, CSS, Javascript</h3>
+      </li>
 
-<li><a href="Snake/index.html" target="_blank"><img src="images/SnakeExample.png"></a>
-  <h3>Developed using HTML, CSS, Javascript</h3>
+      <li><a href="Snake/index.html" target="_blank"><img src="images/SnakeExample.png"></a>
+        <h3>Developed using HTML, CSS, Javascript</h3>
+      </li>
 
-
-</li>
-</ul>
-
-
-
-
+      <li><a href="http://www.jaredcpsc3750.com/MovieProject/Search.php" target="_blank"><img src="images/MovieExample.png"></a>
+        <h3>Log in and keep track of watched movies. Utilizes a movie API and mySQL database.</h3>
+      </li>
 
 
-</div>
+
+    </ul>
+
+
+
+
+
+
+  </div>
 
 
 
@@ -110,14 +117,15 @@
 
 
 
-    <h1 id="ExampleHeader">Server Side Projects <p>Click images for more info!</p></h1>
+    <h1 id="ExampleHeader">Server Side Projects <p>Click images for more info!</p>
+    </h1>
 
 
 
     <div id="Examples">
       <button class="popup-button" onclick="togglePopup('popup1')"><img src="images/caeser-example.png"
           alt="caeser-example" border="0"></button>
-          
+
       <button class="popup-button" onclick="togglePopup('popup2')"> <img src="images/Quiddler-Example.png"
           alt="Quiddler-Example"> </button>
       <button class="popup-button" onclick="togglePopup('popup3')"> <img src="images/Connect4-example1.png"
@@ -150,7 +158,8 @@
       <div class="popup-content">
         <p>Quiddler is a popular card game where one has a deck of cards comprised of one to two letter each and must
           use them to create a word. The score is calculated based on what
-          letters you used to create the word. Quiddler helper was created using the programming language C as an aid to Quiddler players, it can
+          letters you used to create the word. Quiddler helper was created using the programming language C as an aid to
+          Quiddler players, it can
           calculate possible words to be created based on the input as well as
           how many points the word is worth. There are two variation to the game, one where it shows the value of the
           word and one where it does not.</p>
@@ -161,7 +170,8 @@
     <div class="popup-container" id="popup3">
       <div class="popup-content">
         <p>
-          Collaborated with a team to develop an expandable Connect Four game in Java, which supports a board size of up to
+          Collaborated with a team to develop an expandable Connect Four game in Java, which supports a board size of up
+          to
           100x100 and accommodates up to 10 players. We created
           two variations of the game, one optimized for memory efficiency and another for speed. Additionally, we
           implemented an interface to efficiently manage the
@@ -171,7 +181,7 @@
         <button onclick="togglePopup('popup3')">Close</button>
       </div>
     </div>
-    
+
     <h1 id="ExampleSkills">Skills</h1>
     <div id="Skills">
       <img src="images/C++_logo.png" alt="C++_logo"> <img src="images/C_Logo.png" alt="C-logo">
