--- a/Length_extension_attack/index.html
+++ b/Length_extension_attack/index.html
@@ -10,7 +10,7 @@
     <style>
         * {
             box-sizing: border-box;
-            margin: 0%;
+            margin: 0;
             padding: 0;
             background-color: #FFF2E1;
             text-align: center;
@@ -18,6 +18,7 @@
 
 
         form {
+            background-color: #f3e1c9;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -26,17 +27,31 @@
             margin: 50px auto;
             width: 30%;
             height: 400px;
-            border: 2px solid red;
         }
 
+
+        .userInput {
+            background-color: #f3e1c9;
+            margin-top: 25px;
+            width: 90%;
+            display: flex;
+            flex-direction: column;
+        }
 
         input {
+            background-color: #f3e1c9;
+            height: 50px;
+            font-size: 15px;
+            color: #6d6151;
 
-            width: 75%;
+
         }
 
-
-
+        h3 {
+            background-color: #f3e1c9;
+            text-align: center;
+            color: #6d6151;
+        }
 
 
         button {
@@ -57,22 +72,39 @@
 </head>
 
 <body>
-    <h1 style="text-align: center; color: #6d6151; margin-top: 30px; margin-bottom: 50px;">welcome to Length extension
+    <h1 style="text-align: center; color: #6d6151; margin-top: 30px; margin-bottom: 25px;">Welcome to Length extension
         attack utility!</h1>
-    <h3 style="text-align: center; color: #6d6151;">This tool is for educational purposes only</h3>
-
+    <h2 style="text-align: center; color: #6d6151;">This tool is for educational purposes only</h2>
+    <h4 style="text-align: center; color: #6d6151; width: 60%; margin: 20px auto;">Enter a URl with the following format
+        "http://target.com/api?token=abc&command=unlockSafes", secret key length must be know and token must be hashed
+        using SHA256 such as,
+        SHA256(SecreteKey||command=unlockSafes)
+    </h4>
 
 
     <form onsubmit="getNewURl(event)">
+
         <div class="userInput">
-            <label>Enter URl</label>
-            <input id="inputUrl" type="text" autocomplete="off">
+            <h3>Enter URl</h3>
+            <input id="inputUrl" type="text" autocomplete="off"
+                placeholder="http://target.com/api?token=abc&command=unlockSafes">
+        </div>
+
+
+
+        <div class="userInput">
+            <h3>Enter Malicious message</h3>
+            <input id="inputLength" type="text" autocomplete="off" placeholder="&command=UnlockSafes">
+            
         </div>
 
         <div class="userInput">
-            <label>Enter key Length</label>
-            <input id="inputLength" type="text" autocomplete="off">
+            <h3>Enter key Length</h3>
+            <input id="inputLength" type="text" autocomplete="off" placeholder="8">
         </div>
+
+
+
         <button>Submit</button>
     </form>
 
@@ -87,11 +119,14 @@
             //const url = 'http://localhost:8000/attack/';
 
 
-           // var secretLength = document.getElementById("inputLength").value;
+            // var secretLength = document.getElementById("inputLength").value;
 
-           var secretLength = 8
+            var secretLength = 8
 
-           // var url = document.getElementById("inputUrl").value;
+            var message = '&command=UnlockSafes'
+
+
+            // var url = document.getElementById("inputUrl").value;
 
 
 
@@ -102,7 +137,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ url: url, secret:secretLength })
+                body: JSON.stringify({ url: url, secret: secretLength, message: message })
             })
                 .then(response => {
                     if (!response.ok) {
