--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
       </li>
 
 
+      <li><a href="https://jared-alvarado.com/Neural_network/index.html" target="_blank"><img src="images/MLP.png"></a>
+        <h3>Neural network developed using HTML, CSS, Javascript. Draw a number and have the model make a predication.</h3>
+      </li>
+
+
+
+
 
     </ul>
 
